--- a/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -1,23 +1,23 @@
 <app-content width="full">
-	<h2 class="page-title" [translate]="'Nuevo episodio'"></h2>
-	<h3 [translate]="'Complete datos solicitados para continuar'"></h3>
+	<h2 class="page-title" [translate]="'guardia.administrative_admision.TITLE'"></h2>
+	<h3 [translate]="'guardia.administrative_admision.SUBTITLE'"></h3>
 
-	<h2 [translate]="'Paciente'"></h2>
+	<h2 [translate]="'guardia.administrative_admision.PATIENT'"></h2>
 
-	<button mat-stroked-button color="primary" *ngIf="!patientCardInfo" (click)="searchPatient()"
-		class="uppercase">Buscar Paciente</button>
+	<button mat-stroked-button color="primary" *ngIf="!patientCardInfo" (click)="searchPatient()" class="uppercase"
+		translate="guardia.administrative_admision.SEARCH_PATIENT"></button>
 	<form fxLayout="column" fxLayoutGap="10px" id="admisionForm" [formGroup]="form" (ngSubmit)="continue()"
 		class="form">
 		<ng-container *ngIf="patientCardInfo">
 			<app-patient-card [patient]="patientCardInfo.basicData" [personPhoto]="patientCardInfo.photo">
-				<div horizontal-content style="align-self: center;">
+				<div horizontal-content fxFlexAlign="center">
 					<button mat-icon-button color="warn" (click)="clearSelectedPatient()">
 						<mat-icon>delete_outline</mat-icon>
 					</button>
 				</div>
 			</app-patient-card>
 			<mat-form-field appearance="outline">
-				<mat-label>Seleccione una cobertura</mat-label>
+				<mat-label translate="guardia.administrative_admision.SELECT_MEDICAL_COVERAGE"></mat-label>
 				<mat-select formControlName="patientMedicalCoverageId" name="patientMedicalCoverageId">
 					<mat-option *ngFor="let patientMedicalCoverage of patientMedicalCoverages"
 						[value]="patientMedicalCoverage.id">
@@ -25,21 +25,20 @@
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
-			<button mat-stroked-button color="primary" (click)="openMedicalCoverageDialog()" class="uppercase">
-				Actualizar
-				Cobertura</button>
+			<button mat-stroked-button color="primary" (click)="openMedicalCoverageDialog()" class="uppercase"
+				translate="guardia.administrative_admision.UPDATE_MEDICAL_COVERAGE"></button>
 		</ng-container>
 
 		<div id="motivos">
-			<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE'"
-				[tableTitle]="'ambulatoria.paciente.nueva-consulta.motivo.table.TITLE'"
+			<app-document-section [sectionTitle]="'guardia.administrative_admision.motivo.TITLE'"
+				[tableTitle]="'guardia.administrative_admision.motivo.table.TITLE'"
 				[columns]="motivoNuevaConsultaService.getColumns()"
 				[data]="motivoNuevaConsultaService.getMotivosConsulta()" [addRemoveColumn]="true"
 				(removeColumn)="motivoNuevaConsultaService.remove($event)">
 
 				<ng-container concept-form>
 					<app-concepts-search *ngIf="!motivoNuevaConsultaService.getSnomedConcept() else mainMotivoConsulta"
-						[label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
+						[label]="'guardia.administrative_admision.motivo.MOTIVO'"
 						(search)="motivoNuevaConsultaService.openSearchDialog($event)">
 					</app-concepts-search>
 
@@ -47,7 +46,7 @@
 						<form [formGroup]="motivoNuevaConsultaService.getForm()"
 							(ngSubmit)="motivoNuevaConsultaService.addToList()">
 							<mat-form-field appearance="outline">
-								<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
+								<mat-label [translate]="'guardia.administrative_admision.motivo.DIAGNOSIS'">
 								</mat-label>
 								<input id="motivo-input" matInput type="text" formControlName="snomed" name="snomed"
 									readonly matTooltip="{{motivoNuevaConsultaService.getSnomedConcept().pt }}">
@@ -60,7 +59,7 @@
 								<button id="submit_motivos" class="uppercase" mat-raised-button color="primary"
 									type="submit">
 									<span class="uppercase"
-										[translate]="'ambulatoria.paciente.nueva-consulta.motivo.ADD'"></span>
+										[translate]="'guardia.administrative_admision.motivo.ADD'"></span>
 								</button>
 							</div>
 						</form>
@@ -72,7 +71,7 @@
 
 		<mat-form-field appearance="outline">
 			<mat-select formControlName="emergencyCareTypeId" name="emergencyCareTypeId" id="emergencyCareTypeId"
-				placeholder="{{'Tipo de guardia' | translate}}">
+				placeholder="{{'guardia.administrative_admision.form.EMERGENCY_CARE_TYPE' | translate}}">
 				<mat-option *ngFor="let emergencyCareType of (emergencyCareType$ | async )"
 					[value]="emergencyCareType.id">{{emergencyCareType.description}}
 				</mat-option>
@@ -81,7 +80,9 @@
 
 		<mat-form-field appearance="outline">
 			<mat-select formControlName="emergencyCareEntranceTypeId" name="emergencyCareEntranceTypeId"
-				id="emergencyCareEntranceTypeId" placeholder="{{'Forma de ingreso' | translate}}" (selectionChange)="setAmbulanceCompanyIdStatus()">
+				id="emergencyCareEntranceTypeId"
+				placeholder="{{'guardia.administrative_admision.form.EMERGENCY_CARE_ENTRANCE_TYPE' | translate}}"
+				(selectionChange)="setAmbulanceCompanyIdStatus()">
 				<mat-option *ngFor="let emergencyCareEntranceType of (emergencyCareEntranceType$ | async )"
 					[value]="emergencyCareEntranceType.id">{{emergencyCareEntranceType.description}}
 				</mat-option>
@@ -90,8 +91,8 @@
 
 		<mat-form-field appearance="outline"
 			*ngIf="form.value.emergencyCareEntranceTypeId === WITH_DOCTOR_IN_AMBULANCE || form.value.emergencyCareEntranceTypeId === WITHOUT_DOCTOR_IN_AMBULANCE">
-			<input formControlName="ambulanceCompanyId" placeholder="{{'ID Compañia ambulancia' | translate }}"
-				matInput>
+			<input formControlName="ambulanceCompanyId"
+				placeholder="{{'guardia.administrative_admision.form.AMBULANCE_COMPANY_ID' | translate }}" matInput>
 		</mat-form-field>
 
 
@@ -106,12 +107,12 @@
 		</mat-radio-group>
 
 		<ng-container *ngIf="hasPoliceIntervention">
-			<span>Detalle del llamado</span>
+			<span translate="guardia.administrative_admision.form.police_intervention.CALL_DETAIL"></span>
 
 			<div fxLayout="row" fxLayoutGap="5px">
 				<mat-form-field appearance="outline">
 					<input formControlName="dateCall" id="dateCall" matInput [matDatepicker]="initPicker"
-						placeholder="Fecha">
+						placeholder="{{'guardia.administrative_admision.form.police_intervention.DATE' | translate}}">
 					<mat-datepicker-toggle matSuffix [for]="initPicker"></mat-datepicker-toggle>
 					<mat-datepicker #initPicker></mat-datepicker>
 				</mat-form-field>
@@ -119,35 +120,45 @@
 
 				<mat-form-field appearance="outline">
 					<input matInput id="time" type="text" formControlName="timeCall"
-						pattern="([0-1]{1}[0-9]{1}|20|21|22|23):[0-5]{1}[0-9]{1}" placeholder="Hora">
+						pattern="{{TIME_PATTERN}}"
+						placeholder="{{'guardia.administrative_admision.form.police_intervention.TIME' | translate}}">
 					<mat-error *ngIf="hasError(form, 'pattern', 'timeCall')">La hora debe cumplir con el formato de 24
 						hs y tener dos digitos para la hora y los minutos respectivamente</mat-error>
 				</mat-form-field>
 			</div>
 
-			<span>Detalle del oficial policial</span>
+			<span translate="guardia.administrative_admision.form.police_intervention.police_officer.TITLE"></span>
 
 			<mat-form-field appearance="outline">
-				<input formControlName="plateNumber" placeholder="{{'Nro de placa' | translate }}" matInput>
+				<input formControlName="plateNumber"
+					placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.PLATE_NUMBER' | translate }}"
+					matInput>
 			</mat-form-field>
 			<div fxLayout="row" fxLayoutGap="5px">
 
 				<mat-form-field appearance="outline">
-					<input formControlName="firstName" placeholder="{{'Nombres' | translate }}" matInput>
+					<input formControlName="firstName"
+						placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.NAME' | translate }}"
+						matInput>
 				</mat-form-field>
 				<mat-form-field appearance="outline">
-					<input formControlName="lastName" placeholder="{{'Apellidos' | translate }}" matInput>
+					<input formControlName="lastName"
+						placeholder="{{'guardia.administrative_admision.form.police_intervention.police_officer.LAST_NAME' | translate }}"
+						matInput>
 				</mat-form-field>
 			</div>
 		</ng-container>
 
 		<section id="actions" fxLayout="row" fxLayoutAlign="space-between">
 
-			<button mat-stroked-button color="primary" (click)="goBack()" class="uppercase">Volver</button>
+			<button mat-stroked-button color="primary" (click)="goBack()" class="uppercase"
+				translate="buttons.BACK"></button>
 
 			<div fxLayoutGap="5px">
-				<button mat-raised-button color="primary" (click)="skip()" class="uppercase">Omitir</button>
-				<button mat-raised-button color="primary" (click)="skip()" class="uppercase">Continuar</button>
+				<button mat-raised-button color="primary" (click)="skip()" class="uppercase"
+					translate="buttons.SKIP"></button>
+				<button mat-raised-button color="primary" (click)="skip()" class="uppercase"
+					translate="buttons.CONTINUE"></button>
 			</div>
 
 		</section>
