tg-2655. [P1] Al agregar medicación sin receta la cobertura es obligatoria

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
@@ -21,7 +21,7 @@
             </mat-form-field>
             
             <div class="margin-checkbox" *ngIf="isMedication()">
-                <mat-checkbox formControlName="withRecipe">
+                <mat-checkbox formControlName="withoutRecipe">
                     <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.new_prescription_dialog.WITHOUT_RECIPE'"></span>
                 </mat-checkbox>
             </div>
