--- a/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -155,7 +155,7 @@
 				translate="buttons.BACK"></button>
 
 			<div fxLayoutGap="5px">
-				<button mat-raised-button color="primary" (click)="goToAdministrativeTriage(null)" class="uppercase"
+				<button mat-raised-button color="primary" (click)="goToBasicTriage(null)" class="uppercase"
 					translate="buttons.SKIP"></button>
 				<button mat-raised-button color="primary" (click)="continue()" class="uppercase"
 					translate="buttons.CONTINUE"></button>
