tg-2654/2657/2658 fixes sobre el popup de agregar prescripcion item y titulo de pestaña ordenes

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
@@ -56,7 +56,7 @@
 </div>
 
 <mat-dialog-actions fxLayout="row" fxLayoutAlign="end start">
-    <button mat-flat-button color="primary" (click)="confirmPrescription()" fxFlexFill.xs>
+    <button mat-flat-button color="primary" *ngIf="prescriptionItems.length" (click)="confirmPrescription()" fxFlexFill.xs>
         <span class="uppercase">{{'buttons.CONFIRM' | translate}}</span>
     </button>
 </mat-dialog-actions>
