tg-2659 [FE-FIX] Errores en buscador de paciente y correccion de archivo de traducciones

--- a/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/admision-administrativa/admision-administrativa.component.html
@@ -25,7 +25,7 @@
 					</mat-option>
 				</mat-select>
 			</mat-form-field>
-			<button mat-stroked-button color="primary" (click)="openMedicalCoverageDialog()" class="uppercase"
+			<button mat-stroked-button type="button" color="primary" (click)="openMedicalCoverageDialog()" class="uppercase"
 				translate="guardia.administrative_admision.UPDATE_MEDICAL_COVERAGE"></button>
 		</ng-container>
 
