--- a/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/home/home.component.html
@@ -82,13 +82,13 @@
 
 									<button id="atender" mat-menu-item
 											*ngIf="episode.state.id === estadosEpisodio.EN_ESPERA"
-											(click)="atender()">
+											(click)="atender(episode.id)">
 										{{ 'guardia.home.episodes.episode.actions.ATENDER' | translate }}
 									</button>
 
 									<button id="finalizar-ausencia" mat-menu-item
 											*ngIf="episode.state.id === estadosEpisodio.EN_ESPERA"
-											(click)="finalizarPorAusencia()">
+											(click)="finalizar(episode.id)">
 										{{ 'guardia.home.episodes.episode.actions.FINALIZAR_AUSENCIA' | translate }}
 									</button>
 								</mat-menu>
