--- a/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -1,4 +1,4 @@
-<mat-card id="patient_card">
+<mat-card id="patient_card" [class]="size">
 	<ng-content select="[header]"></ng-content>
 	<div id="layout_header" fxLayout="row" fxLayoutAlign="space-between" fxLayout.lt-sm="column">
 		<mat-card-header>
