--- a/front-end/webapp/src/app/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
+++ b/front-end/webapp/src/app/modules/guardia/dialogs/select-consultorio/select-consultorio.component.html
@@ -4,14 +4,14 @@
 
 <form [formGroup]="form" (ngSubmit)="submit()">
 	<div mat-dialog-content>
-		<mat-form-field style="width: 100%" appearance="outline">
+		<mat-form-field fxFlex="100%" appearance="outline">
 			<mat-label [translate]="'guardia.home.episodes.episode.select_consultorio.CONSULTORIO'"></mat-label>
 			<mat-select formControlName="consultorio">
-				<mat-option id="consultorio_{{doctorsOffice.id}}"
-							*ngFor="let doctorsOffice of doctorsOffices$ | async"
-							[value]="doctorsOffice.id"
+				<mat-option id="consultorio_{{consultorio.id}}"
+							*ngFor="let consultorio of consultorios$ | async"
+							[value]="consultorio.id"
 				>
-					{{doctorsOffice.description}}
+					{{consultorio.description}}
 				</mat-option>
 			</mat-select>
 			<mat-error [translate]="'forms.REQUIRED'"></mat-error>
