tg-2744 [FE] Agrega boton para completar paciente de episodio de guardia

--- a/front-end/webapp/src/app/modules/guardia/routes/episode-details/episode-details.component.html
+++ b/front-end/webapp/src/app/modules/guardia/routes/episode-details/episode-details.component.html
@@ -84,6 +84,9 @@
 					<app-personal-information [personalInformation]="personalInformation"
 						[patientMedicalCoverage]="patientMedicalCoverage">
 					</app-personal-information>
+
+					<button *ngIf="!responseEmergencyCare.patientId" mat-raised-button color="primary"
+						(click)="searchPatient()" class="uppercase" translate="Buscar Paciente"></button>
 				</div>
 			</app-patient-card>
 		</div>
