--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
@@ -4,8 +4,8 @@
 	</ng-template>
 	<section>
 		<h2 [translate]="'ambulatoria.paciente.ordenes_prescripciones.TITLE'"></h2>
-		<div fxLayout="row" fxLayoutGap="20px">
-			<div fxLayout="column" fxFlex="50%" fxLayout.lt-md="row" fxLayoutGap="20px" >
+		<div fxLayout="column" fxLayout.gt-sm="row" fxLayoutGap="20px">
+			<div fxFlex="50%">
 				<app-summary-card id="medicacion"	[header]="medicacion"
 													[editable]="true"
 													[canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
@@ -13,77 +13,102 @@
 
 					<mat-list id="lista-medication" *ngIf="medicationsInfo?.length > 0 else noInfo">
 						<div fxLayout="row" *ngFor="let medicationInfo of medicationsInfo">
-							<mat-list-item >
+							<mat-list-item>
 								<div fxFlex="100%">
-									<h3 mat-line class="primary bold" *ngIf="true">
-										Activa
-									</h3>
-									<span mat-line class="mat-body" *ngIf="medicationInfo.hasRecipe else NoRecipe">
-										Receta #{{medicationInfo.medicationRequestId}}
-									</span>
-									<ng-template #NoRecipe>
-										<span mat-line class="mat-body"
-											[translate]="'ambulatoria.paciente.ordenes_prescripciones.SIN_RECETA'">
+
+									<div fxLayout="row" fxLayoutAlign="space-between start">
+										<h3 mat-line class="primary bold element-margin">
+											Activa
+										</h3>
+
+										<div>
+											<button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="true">
+												<mat-icon>more_vert</mat-icon>
+											</button>
+											<mat-menu #menu="matMenu">
+												<button mat-menu-item >
+													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
+												</button>
+												<button mat-menu-item >
+													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.BACK'"></span>
+												</button>
+												<button mat-menu-item >
+													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
+												</button>
+												<button mat-menu-item >
+													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
+												</button>
+												<button mat-menu-item >
+													<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.REACTIVATE'"></span>
+												</button>
+											</mat-menu>
+										</div>
+									</div>
+
+									<div class="element-margin" fxLayout="column-reverse" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
+										<span class="mat-subheading-2 capitalize-first-letter" style="margin: 0" fxFlex="70%">
+											{{medicationInfo.snomed.pt}}
 										</span>
-									</ng-template>
-									<span mat-line class="mat-body-strong capitalize-first-letter">
-										{{medicationInfo.snomed.pt}}
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.dosage?.periodUnit == 'h'">
-										Una aplicación cada {{medicationInfo.dosage.frequency}} hs
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.dosage?.periodUnit == 'd'">
-										Una aplicación por día
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.dosage?.duration != undefined">
-										Durante {{medicationInfo.dosage.duration}} días
-									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.dosage?.chronic">
-										Uso crónico
-									</span>
-									<h4 mat-line class="primary bold capitalize-first-letter">
-										{{medicationInfo.healthCondition.snomed.pt}}
-									</h4>
-									<span mat-line class="mat-body capitalize-first-letter">
-										Dr. {{medicationInfo.doctor.firstName }} {{medicationInfo.doctor.lastName }}
-									</span>
-									<mat-card-subtitle>
-										<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.totalDays == 0">
+
+										<span mat-line class="mat-body" *ngIf="medicationInfo.hasRecipe else NoRecipe">
+											Receta #{{medicationInfo.medicationRequestId}}
+										</span>
+										<ng-template #NoRecipe>
+											<span mat-line class="mat-body"
+												[translate]="'ambulatoria.paciente.ordenes_prescripciones.SIN_RECETA'">
+											</span>
+										</ng-template>
+									</div>
+
+									<div fxLayout="column">
+										<div>
+											<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.periodUnit == 'h'">
+												Una aplicación cada {{medicationInfo.dosage.frequency}} hs 
+											</span>
+											<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.periodUnit == 'd'">
+												Una aplicación por día 
+											</span>
+										</div>
+
+										<div>
+											<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.duration != undefined">
+												Durante {{medicationInfo.dosage.duration}} días
+											</span>
+											<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.dosage?.chronic">
+												Uso crónico
+											</span>
+										</div>
+									</div>
+
+									<div class="element-margin">
+										<h3 mat-line class="primary bold capitalize-first-letter">
+											{{medicationInfo.healthCondition.snomed.pt}}
+										</h3>
+									</div>
+
+									<div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
+										<span mat-line class="mat-body capitalize-first-letter element-light-color">
+											{{medicationInfo.doctor.firstName }} {{medicationInfo.doctor.lastName }}
+										</span>
+										<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays == 0">
 											Desde hoy
 										</span>
-										<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.totalDays == 1">
+										<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays == 1">
 											Hace 1 día
 										</span>
-										<span mat-line class="mat-body capitalize-first-letter" *ngIf="medicationInfo.totalDays > 1">
+										<span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="medicationInfo.totalDays > 1">
 											Hace {{medicationInfo.totalDays }} días
 										</span>
-									</mat-card-subtitle>
-								</div>
+									</div>
 
-								<button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="false">
-									<mat-icon>more_vert</mat-icon>
-								</button>
-								<mat-menu #menu="matMenu">
-									<button mat-menu-item >
-										<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
-									</button>
-									<button mat-menu-item >
-										<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.BACK'"></span>
-									</button>
-									<button mat-menu-item >
-										<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
-									</button>
-									<button mat-menu-item >
-										<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
-									</button>
-								</mat-menu>
+								</div>
 							</mat-list-item>
 							<mat-divider></mat-divider>
 						</div>
 					</mat-list>
 				</app-summary-card>
 			</div>
-			<div fxLayout="column" fxFlex="50%" fxLayout.lt-md="row" fxLayoutGap="20px">
+			<div fxFlex="50%" fxLayoutGap="20px">
 				<app-summary-card id="estudios" [header]="estudios"
 												[editable]="true"
 												[canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
@@ -109,19 +134,19 @@
 									Dr. {{diagnosticReport.doctor.firstName }} {{diagnosticReport.doctor.lastName }}
 								</span>
 								<mat-card-subtitle>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays  == 0">
+									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays == 0">
 										Desde hoy
 									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays  == 1">
+									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays == 1">
 										Hace 1 día
 									</span>
-									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays  > 1">
+									<span mat-line class="mat-body capitalize-first-letter" *ngIf="diagnosticReport.totalDays > 1">
 										Hace {{diagnosticReport.totalDays }} días
 									</span>
 								</mat-card-subtitle>
 							</div>
 
-							<button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="false">
+							<button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="true">
 								<mat-icon>more_vert</mat-icon>
 							</button>
 							<mat-menu #menu="matMenu">
