--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.scss
@@ -1,3 +1,7 @@
-.mat-card-subtitle {
-	margin-top: 10px;
+.element-margin {
+	margin: 10px 0 0 0;
+}
+
+.element-light-color {
+	color: rgba(0, 0, 0, 0.54);
 }
