tg-2696 mueve modulo guardia a historia-clinica

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/admision-administrativa/admision-administrativa.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../assets/styles/mat-mixins';
-@import '../../../../../assets/styles/mixins';
+@import '../../../../../../../assets/styles/mat-mixins';
+@import '../../../../../../../assets/styles/mixins';
 
 .form{
 	@include mat-form-field-background-white;
