--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.scss
@@ -21,7 +21,7 @@
 }
 
 .header-image {
-	background-image: url("../../../../../assets/images/empty-profile.png");
+	background-image: url("../../../../../../../assets/images/empty-profile.png");
 	background-size: cover;
 }
 
